tdf#142040 CSV import broken in master

regression from
    commit 75997f13ee3a71d6c994392264b0190bd7bb6756
no need to create temporaries when appending number to
O[U]StringBuffer

Change-Id: Iacd74475ef7e9a70f60cedf80d3dfe4f1350f40c